# adventofcode-rs

./: .bacon-wrapper.sh  .editorconfig  .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  Trunk.toml  bacon.toml
.cargo/: config.toml
.github/workflows/: ci.yml  wasm.yml
benches/: benchmarks.rs  helpers.rs  solutions.rs
src/: aoc.rs  common.rs  day.rs  day0.rs  input.rs  lib.rs  main.rs  output.rs  run.rs  template_day0.rs
src/aoc/: cli.rs  day.rs  input.rs  online.rs  output.rs  part.rs  results.rs  run.rs  wasm.rs
src/aoc/cli/: args.rs  benchmark.rs  print_results.rs  run.rs
src/aoc/wasm/: app.rs  run.rs  select.rs
src/common/: grid.rs  ocr.rs  parsing.rs
src/common/grid/: area.rs  directions.rs  distance.rs  minmax.rs  walk.rs
src/y2016/: day1.rs
src/y2021/: day1.rs
src/y2022/: day1.rs  day10.rs  day13.rs  day16.rs  day17.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day6.rs  mod.rs
src/y2023/: day1.rs  day11.rs  day12.rs  day13.rs  day15.rs  day17.rs  day18.rs  day2.rs  day3.rs  day4.rs  day6.rs  day7.rs  day8.rs  day9.rs
src/y2024/: day1.rs  day14.rs  day2.rs  day3.rs  day9.rs
www/: index.html
