[package]
name = "adventofcode"
version = "0.1.0"
authors = ["Benjamin Neff"]
edition = "2021"

description = "Advent of Code in Rust"
repository = "https://github.com/SuperTux88/adventofcode-rs"
license = "MIT"

default-run = "aoc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
colored = "2.0.0"
dirs = { version = "4.0.0", optional = true }
glam = "0.22.0"
itertools = "0.10.5"
nom = "7.1.1"
num = "0.4.0"
pathfinding = "4.2.0"
rayon = { version = "1.6.1", optional = true }
wasm-bindgen = { version = "0.2.83", optional = true }
console_error_panic_hook = { version = "0.1.6", optional = true }

[dependencies.reqwest]
version = "0.11.13"
optional = true
default-features = false
features = ["blocking", "gzip", "rustls-tls"]

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports"] }

[features]
default = ["online", "parallel"]
online = ["dep:dirs", "dep:reqwest"]
parallel = ["dep:rayon"]
wasm = ["dep:wasm-bindgen", "dep:console_error_panic_hook", "colored/no-color"]

[[bin]]
name = "wasm"
required-features = ["wasm"]

[[bench]]
name = "solutions"
harness = false

[[bench]]
name = "helpers"
harness = false

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
strip = true
lto = true

[profile.bench]
lto = "thin"
