[package]
name = "adventofcode"
version = "0.1.0"
authors = ["Benjamin Neff"]
edition = "2021"
publish = false

description = "Advent of Code in Rust"
repository = "https://github.com/SuperTux88/adventofcode-rs"
license = "MIT"

default-run = "aoc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
colored = "2.0.0"
dirs = { version = "5.0.1", optional = true }
glam = "0.24.2"
itertools = "0.12.0"
nom = "7.1.1"
num = "0.4.0"
pathfinding = "4.2.0"
rayon = { version = "1.6.1", optional = true }
wasm-bindgen = { version = "0.2.83", optional = true }
yew = { version = "0.21.0", features = ["csr"], optional = true }

[dependencies.reqwest]
version = "0.11.13"
optional = true
default-features = false
features = ["blocking", "gzip", "rustls-tls"]

[dependencies.web-sys]
version = "0.3.60"
optional = true
features = [
  "HtmlSelectElement",
  "HtmlTextAreaElement",
]

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports"] }

[features]
default = ["online", "parallel"]
online = ["dep:dirs", "dep:reqwest"]
parallel = ["dep:rayon"]
wasm = ["dep:wasm-bindgen", "dep:web-sys", "dep:yew", "colored/no-color"]

[[bin]]
name = "wasm"
required-features = ["wasm"]

[[bench]]
name = "solutions"
harness = false

[[bench]]
name = "helpers"
harness = false

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
strip = true
lto = true

[profile.release.package.reqwest]
opt-level = "s"

[profile.release.package.rustls]
opt-level = "s"

[profile.release.package.ring]
opt-level = "s"

[profile.release.package.h2]
opt-level = "s"

[profile.release.package.clap]
opt-level = "s"

[profile.bench]
lto = "thin"
